kubernetes/apps/kube-system/cilium/gateway/external-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: ingress.dcunha.io #testing if cloud flare update to a record
spec:
  gatewayClassName: cilium
  # infrastructure:
  #   annotations:
  #     io.cilium/lb-ipam-ips: &ip 10.10.99.98
  addresses:
    - value: 10.10.99.98
  listeners:
    # catch all external http -> https
    - name: http-redirect
      # hostname: "*.dcunha.io"
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      hostname: "*.dcunha.io"
      port: 443
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          #     from: All
          from: Selector
          selector:
            matchLabels:
              external-gateway: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: dcunha.io-prod
            kind: Secret
