kubernetes/apps/kube-system/cilium/gateway/http-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-https-redirect
  namespace: default
spec:
  parentRefs:
    - name: internal-gateway
      sectionName: http-redirect
    - name: external-gateway
      sectionName: http-redirect
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
