kubernetes/apps/kube-system/cilium/gateway/https-headers.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-https-redirect
  namespace: default
spec:
  parentRefs:
    - name: internal-gateway
      sectionName: https
    - name: external-gateway
      sectionName: https
  rules:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
          - name: "browserXssFilter"
            value: "true"
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
          - name: "contentTypeNosniff"
            value: "true"
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
          - name: "forceSTSHeader"
            value: "true"
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
          - name: "stsIncludeSubdomains"
            value: "true"
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
          - name: "stsPreload"
            value: "true"
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
          - name: "stsSeconds"
            value: "15552000"
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
          - name: "customFrameOptionsValue"
            value: "SAMEORIGIN"
